vlib/v/parser/tests/option_result_err.out
vlib/v/parser/tests/option_result_err.vv:1:11: error: the type must be Option or Result
    1 | fn abc() ?!string {
      |           ^
    2 |     return ''
    3 | }
